# vidhash

./: .mailmap  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: codeql-analysis.yml  lint.yaml  publish.yaml  tests.yaml
test/: conftest.py  test_basic.py  test_overlap.py
videohash/: hash_options.py  main.py  match_options.py
vidhash/: __init__.py  frame_hash.py  func.py  hash_options.py  main.py  match_options.py  video_hash.py
vidhash/stubs/: ffmpy3.pyi  imagehash.pyi
