[tool.poetry]
name = "vidhash"
version = "0.3.2"
description = "A package for hashing videos and checking for similarity"
authors = ["Roselyn Coales <roselyn@coales.co.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SpangleLabs/vidhash"

[tool.poetry.dependencies]
python = "^3.10"
ImageHash = "^4.2.1"
Pillow = "^12.1.0"
ffmpy3 = "^0.2.4"
numpy = "^1.22.4"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "vidhash/stubs"
files = "vidhash,test"
exclude = [
    "venv",
    "vidhash/stubs",
]

[tool.isort]
line_length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.taskipy.tasks]
lint_flake8 = "flake8"
lint_mypy = "mypy vidhash test"
lint_isort = "isort vidhash test --check"
lint = "task lint_flake8 && task lint_mypy && task lint_isort"
format_isort = "isort vidhash test"
format_black = "black vidhash"
autoformat = "task format_black && task format_isort"
test = "pytest"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-black (>=0.4.0,<0.5.0)",
    "black (>=25.12.0,<26.0.0)",
    "flake8-type-checking (>=3.1.1,<4.0.0)",
    "types-pillow (>=10.2.0.20240822,<11.0.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "types-requests (>=2.32.4.20260107,<3.0.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]
